fix bad markdown formatting

--- a/src/content/docs/en/recipes/bun.mdx
+++ b/src/content/docs/en/recipes/bun.mdx
@@ -5,9 +5,9 @@ type: recipe
 i18nReady: false
 ---
 
-[Bun](<https://bun.sh/>) is a runtime for JavaScript built for speed. See [Bun's documentation](<https://bun.sh/docs>) for more information.
+[Bun](https://bun.sh/) is a runtime for JavaScript built for speed. See [Bun's documentation](https://bun.sh/docs) for more information.
 
-Using Bun with Astro still is experimental. Some integrations may not work as expected. If you have [any problems using Bun](<https://github.com/oven-sh/bun/issues/new/choose>), please [open an issue on GitHub](<https://github.com/withastro/astro/issues/new/choose>)!
+Using Bun with Astro still is experimental. Some integrations may not work as expected. If you have [any problems using Bun](https://github.com/oven-sh/bun/issues/new/choose), please [open an issue on GitHub](https://github.com/withastro/astro/issues/new/choose)!
 
 ## Installing Bun
 
@@ -66,7 +66,7 @@ bunx astro add react
 This will work exactly the same as if you were using NPM, but with the added benefit of using Bun's blazing fast runtime.
 
 :::note[Note]
-Some integrations might not work as expected. If you find any issues, please [open an issue on GitHub](<https://github.com/withastro/astro/issues/new/choose>)!
+Some integrations might not work as expected. If you find any issues, please [open an issue on GitHub](https://github.com/withastro/astro/issues/new/choose)!
 :::
 
 ## Building your site with Bun
