--- a/src/content/docs/es/guides/deploy/google-cloud.mdx
+++ b/src/content/docs/es/guides/deploy/google-cloud.mdx
@@ -11,7 +11,7 @@ i18nReady: true
 
 ### Cloud Storage (solo estático)
 
-1. [Crea un nuevo proyecto GCP](<https://console.cloud.google.com/projectcreate>), o selecciona uno que ya tengas.
+1. [Crea un nuevo proyecto GCP](https://console.cloud.google.com/projectcreate), o selecciona uno que ya tengas.
 
 2. Crea un nuevo bucket dentro de [Cloud Storage](https://cloud.google.com/storage?hl=es-419).
 
@@ -29,9 +29,9 @@ Cloud Run es una plataforma sin servidor que te permite ejecutar un contenedor s
 
 #### Prepara el servicio
 
-1. [Crea un nuevo proyecto GCP](<https://console.cloud.google.com/projectcreate>), o selecciona uno que ya tengas.
+1. [Crea un nuevo proyecto GCP](https://console.cloud.google.com/projectcreate), o selecciona uno que ya tengas.
 
-2. Asegúrate de que la [API de Cloud Run](<https://console.cloud.google.com/apis/library/run.googleapis.com>) esté habilitada.
+2. Asegúrate de que la [API de Cloud Run](https://console.cloud.google.com/apis/library/run.googleapis.com) esté habilitada.
 
 3. Crea un nuevo servicio.
 
@@ -101,7 +101,7 @@ Una vez que el Dockerfile está creado, compílalo en una imagen y súbelo a Goo
 
 **Compila localmente usando Docker**:
 
-Usa el comando `docker build` para compilar la imagen, `docker tag` para darle una etiqueta, y `docker push` para subirla a un registro. En el caso de Google Cloud, [`Google Cloud Registry`](https://cloud.google.com/container-registry/docs/pushing-and-pulling?hl=es-419#add-registry) es la opción más fácil, pero también puedes usar [Docker Hub](<https://hub.docker.com/>).
+Usa el comando `docker build` para compilar la imagen, `docker tag` para darle una etiqueta, y `docker push` para subirla a un registro. En el caso de Google Cloud, [`Google Cloud Registry`](https://cloud.google.com/container-registry/docs/pushing-and-pulling?hl=es-419#add-registry) es la opción más fácil, pero también puedes usar [Docker Hub](https://hub.docker.com/).
 
 ```bash
 # compila tu contenedor
@@ -130,11 +130,11 @@ Puedes usar una herramienta de CI/CD que soporte Docker, como [GitHub Actions](h
 
 **Compilar usando [Cloud Build](https://cloud.google.com/build?hl=es-419)**:
 
-En vez de compilar el Dockerfile localmente, puedes instruir a Google Cloud a compilar la imagen de forma remota. Consulta la [documentación de Google Cloud Build aquí](<https://cloud.google.com/build/docs/build-push-docker-image>).
+En vez de compilar el Dockerfile localmente, puedes instruir a Google Cloud a compilar la imagen de forma remota. Consulta la [documentación de Google Cloud Build aquí](https://cloud.google.com/build/docs/build-push-docker-image).
 
 #### Desplegando el contenedor
 
-El despliegue puede ser manejado manualmente en tu terminal [usando `gcloud`](<https://cloud.google.com/run/docs/deploying#service>) o automáticamente usando [Cloud Build](https://cloud.google.com/build) o cualquier otro sistema de CI/CD.
+El despliegue puede ser manejado manualmente en tu terminal [usando `gcloud`](https://cloud.google.com/run/docs/deploying#service) o automáticamente usando [Cloud Build](https://cloud.google.com/build) o cualquier otro sistema de CI/CD.
 
 :::note[¿Necesitas acceso público?]
 ¡No olvides agregar el permiso `Cloud Run Invoker` al grupo `allUsers` en la configuración de permisos de Cloud Run!
