i18n(zh-cn): update error-reference.mdx

--- a/src/content/docs/zh-cn/reference/error-reference.mdx
+++ b/src/content/docs/zh-cn/reference/error-reference.mdx
@@ -30,6 +30,10 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 - [**InvalidPrerenderExport**](/zh-cn/reference/errors/invalid-prerender-export/) (E03019)<br/>Invalid prerender export.
 - [**InvalidComponentArgs**](/zh-cn/reference/errors/invalid-component-args/) (E03020)<br/>Invalid component arguments.
 - [**PageNumberParamNotFound**](/zh-cn/reference/errors/page-number-param-not-found/) (E03021)<br/>Page number param not found.
+- [**ImageMissingAlt**](/zh-cn/reference/errors/image-missing-alt/) (E03022)<br/>Missing alt property
+- [**InvalidImageService**](/zh-cn/reference/errors/invalid-image-service/) (E03023)<br/>Error while loading image service
+- [**MissingImageDimension**](/zh-cn/reference/errors/missing-image-dimension/) (E03024)<br/>Missing image dimensions
+- [**UnsupportedImageFormat**](/zh-cn/reference/errors/unsupported-image-format/) (E03025)<br/>Unsupported image format
 - [**UnknownViteError**](/zh-cn/reference/errors/unknown-vite-error/) (E04000)<br/>Unknown Vite Error.
 - [**FailedToLoadModuleSSR**](/zh-cn/reference/errors/failed-to-load-module-ssr/) (E04001)<br/>Could not import file.
 - [**InvalidGlob**](/zh-cn/reference/errors/invalid-glob/) (E04002)<br/>Invalid glob pattern.
