--- a/src/content/docs/en/guides/migrate-to-astro/from-gitbook.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-gitbook.mdx
@@ -55,17 +55,20 @@ You can pass a `--template` argument to the `create astro` command to start a ne
     </Fragment>
   </PackageManagerTabs>
 
-Once you have a new Astro project, you can sync your existing GitBook content to your new Astro project. GitBook has a [gitsync feature](https://docs.gitbook.com/product-tour/git-sync) that will automatically sync your GitBook content to a GitHub/GitLab repository. To sync directly to the docs template's content collection, specify `src/content/docs/en` or `src/content/docs` as the project directory.
+Once you have a new Astro project, you can sync your existing GitBook content to your new Astro project. GitBook has a [gitsync feature](https://docs.gitbook.com/product-tour/git-sync) that will automatically sync your GitBook content to a GitHub/GitLab repository. 
+
+To sync directly to the docs template's content collection, specify `src/content/docs/en` or `src/content/docs` as the project directory.
 
 :::caution
 When enabling git sync be sure to specify "**GitBook to GitHub**" as the priority. This will ensure that your GitBook content is synced to your GitHub repository. Otherwise, you will overwrite your existing GitBook content.
-![Choose Priority](/guides/gitbook-gitsync.png)
 :::
 
-After syncing the content to your repository and deleting the sync, you'll have a copy of your GitBook content in your repository. There are a few things to take into account before you can use this content in your Astro project:
+After syncing the content, you will now have a copy of your GitBook content in your Astro repository. Disable git sync to prevent future syncing with GitBook.
+Note that although you now have your content migrated to your Astro project, it will not be immediately usable. To use this content in your Astro site, you will need to spend some time manually changing Gitbook's Markdoc into a format compatible with Astro. In particular:
 
-- Gitbook uses a special syntax that differs from Markdoc where the `/` prefix denoting a closing tag is replaced with `end` for Gitbook files. In addition, some features of Gitbook rely on custom Markdoc components.
 - Astro's [Markdoc integration](/en/guides/integrations-guide/markdoc/) requires that the file extension be `.mdoc`. This is to avoid conflicts with other Markdown extensions like `.mdx` and `.md`.
+- Gitbook uses a special syntax that differs from Markdoc where the `/` prefix denoting a closing tag is replaced with `end` for Gitbook files. You will need to update this notation throughout your files.
+- Some features of Gitbook rely on custom Markdoc components. These components will not exist in Astro and must be deleted from your Markdoc code.
 
 ## Community Resources
 
