fix: Fix InferGetStaticPropsType example

--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -35,7 +35,7 @@ Additionally, our templates include an `env.d.ts` file inside the `src` folder t
 /// <reference types="astro/client" />
 ```
 
-If you are not using VSCode, you can install the [Astro TypeScript plugin](https://www.npmjs.com/package/@astrojs/ts-plugin) to support importing `.astro` files from `.ts` files (which can be useful for re-exporting). 
+If you are not using VSCode, you can install the [Astro TypeScript plugin](https://www.npmjs.com/package/@astrojs/ts-plugin) to support importing `.astro` files from `.ts` files (which can be useful for re-exporting).
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -259,10 +259,10 @@ export async function getStaticPaths() {
 type Params = InferGetStaticParamsType<typeof getStaticPaths>;
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
-const { slug } = Astro.params;
-//               ^? { slug: string; }
+const { slug } = Astro.params as Params;
+//               			 ^? { slug: string; }
 const { title } = Astro.props;
-//                ^? { draft: boolean; title: string; }
+//                			^? { draft: boolean; title: string; }
 ---
 ```
 
