feat: add documentation updates

--- a/src/content/docs/de/guides/styling.mdx
+++ b/src/content/docs/de/guides/styling.mdx
@@ -148,6 +148,15 @@ Mit diesem Pattern kannst du untergeordnete Komponenten direkt gestalten. Astro 
 Da die Eigenschaft `class` das Kind in den Geltungsbereich des Elternteils einbezieht, ist es möglich, dass Styles vom Elternteil auf das Kind übertragen werden. Um unbeabsichtigte Nebeneffekte zu vermeiden, solltest du sicherstellen, dass du eindeutige Klassennamen in der untergeordneten Komponente verwendest.
 :::
 
+### Inline Styles
+
+Du kannst HTML-Elemente mit dem Attribut "style" inline stylen. Dies kann ein CSS-String oder ein Objekt mit CSS-Eigenschaften sein:
+
+```astro title="src/pages/index.astro"
+// Diese sind gleichwertig:
+<p style={{ color: "brown", textDecoration: "underline" }}>Mein Text</p>
+<p style="color: brown; text-decoration: underline;">Mein Text</p>
+```
 
 ## Externe Styles
 
@@ -415,7 +424,7 @@ Astro unterstützt CSS-Präprozessoren wie [Sass][sass], [Stylus][stylus] und [L
 ### Sass und SCSS
 
  ```shell
- npm install -D sass
+ npm install sass
  ```
 
 Verwende `<style lang="scss">` oder `<style lang="sass">` in `.astro`-Dateien
@@ -423,7 +432,7 @@ Verwende `<style lang="scss">` oder `<style lang="sass">` in `.astro`-Dateien
 ### Stylus
 
 ```shell
-npm install -D stylus
+npm install stylus
 ```
 
 Verwende `<style lang="styl">` oder `<style lang="stylus">` in `.astro`-Dateien
@@ -431,7 +440,7 @@ Verwende `<style lang="styl">` oder `<style lang="stylus">` in `.astro`-Dateien
 ### Less
 
 ```shell
-npm install -D less
+npm install less
 ```
 
 Verwende `<style lang="less">` in `.astro`-Dateien.
