fix: broken links

--- a/src/content/docs/de/guides/environment-variables.mdx
+++ b/src/content/docs/de/guides/environment-variables.mdx
@@ -17,7 +17,7 @@ PUBLIC_ANYBODY=there
 In diesem Beispiel ist `PUBLIC_ANYBODY` (zugänglich über `import.meta.env.PUBLIC_ANYBODY`) sowohl im Server- als auch im Client-Code verfügbar, während `SECRET_PASSWORD` (zugänglich über `import.meta.env.SECRET_PASSWORD`) nur serverseitig verfügbar ist.
 
 :::caution
-`.env`-Dateien werden nicht in [Konfigurationsdateien](/de/guides/configuring-astro/#environment-variables) geladen.
+`.env`-Dateien werden nicht in [Konfigurationsdateien](/de/guides/configuring-astro/) geladen.
 :::
 
 ## Standard-Umgebungsvariablen
