--- a/src/content/docs/en/reference/error-reference.mdx
+++ b/src/content/docs/en/reference/error-reference.mdx
@@ -43,6 +43,7 @@ The following reference is a complete list of the errors you may encounter while
 - [**InvalidImageService**](/en/reference/errors/invalid-image-service/) (E03023)<br/>Error while loading image service
 - [**MissingImageDimension**](/en/reference/errors/missing-image-dimension/) (E03024)<br/>Missing image dimensions
 - [**UnsupportedImageFormat**](/en/reference/errors/unsupported-image-format/) (E03025)<br/>Unsupported image format
+- [**PrerenderDynamicEndpointPathCollide**](/en/reference/errors/prerender-dynamic-endpoint-path-collide/) (E03026)<br/>Prerendered dynamic endpoint has path collision.
 - [**UnknownViteError**](/en/reference/errors/unknown-vite-error/) (E04000)<br/>Unknown Vite Error.
 - [**FailedToLoadModuleSSR**](/en/reference/errors/failed-to-load-module-ssr/) (E04001)<br/>Could not import file.
 - [**InvalidGlob**](/en/reference/errors/invalid-glob/) (E04002)<br/>Invalid glob pattern.
