--- a/src/content/docs/en/contribute.mdx
+++ b/src/content/docs/en/contribute.mdx
@@ -7,6 +7,26 @@ import Button from '~/components/Button.astro'
 import ContributorList from '~/components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
+
+We welcome contributions of any size and contributors of any skill level. As an open source project, we believe in giving back to our contributors. We are happy to help with guidance on PRs, technical writing, and turning any feature idea into a reality.
+
+## Contributor manuals
+
+We have several guides with information on how to get started!
+
+- [Main Contributing Guide](https://github.com/withastro/docs/blob/main/CONTRIBUTING.md) - Please consult this first!
+- [Writing Guide](https://github.com/withastro/docs/blob/main/WRITING.md) - Tips for writing in Astro Docs style.
+- [Translating Guide](https://github.com/withastro/docs/blob/main/TRANSLATING.md) - Information on how to help translate Astro Docs into your language.
+- [Recipe Guide](https://github.com/withastro/docs/blob/main/RECIPES.md) - Learn about writing and contributing a recipe.
+
+## Community manuals
+
+These are guides for roles within the Astro community.
+- [Maintainer Guide](https://github.com/withastro/docs/blob/main/MAINTAINERS.md) - How to maintain this repository as an Astro maintainer.
+- [Support Squad Guide](https://github.com/withastro/docs/blob/main/SUPPORTSQUAD.md) - How to help Team Docs as part of your Support role.
+
+## Our contributors
+
 These docs are brought to you by all these helpful people. [Join us on GitHub!](https://github.com/withastro/docs)
 
 <ContributorList githubRepo="withastro/docs" />
