"guided" by @ElianCodes!

--- a/src/content/docs/en/contribute.mdx
+++ b/src/content/docs/en/contribute.mdx
@@ -20,7 +20,7 @@ You can also make a huge contribution by getting involved by leaving review comm
 
 Every PR, especially translation PRs, needs reviewers! Reviewing PRs and leaving comments, suggestions or an approving "LGTM!" ("Looks Good To Me!") is a great way to get started on Team Docs, and to learn more about Astro.
 
-## Contributor manuals
+## Contributor guides
 
 We have several guides with information on how to get started!
 
@@ -29,7 +29,7 @@ We have several guides with information on how to get started!
 - [Translating Guide](https://github.com/withastro/docs/blob/main/TRANSLATING.md) - Information on how to help translate Astro Docs into your language.
 - [Recipe Guide](https://github.com/withastro/docs/blob/main/RECIPES.md) - Learn about writing and contributing a recipe.
 
-## Community manuals
+## Community guides
 
 These are guides for roles within the Astro community.
 - [Maintainer Guide](https://github.com/withastro/docs/blob/main/MAINTAINERS.md) - How to maintain this repository as an Astro maintainer.
