--- a/src/content/docs/en/guides/testing.mdx
+++ b/src/content/docs/en/guides/testing.mdx
@@ -229,14 +229,14 @@ You can also have Playwright start your server when you run your testing script 
 Here is an example of the configuration and commands required when using Yarn:
 
 1. Add a test script to your `package.json` file in the project root, such as `"test:e2e": "playwright test"`.
-1. In `playwright.config.ts`, add the `webServer` object and update the command value to `yarn preview`.
+1. In `playwright.config.ts`, add the `webServer` object and update the command value to `npm run preview`.
 
     ```js title="playwright.config.ts" ins={4-9} "npm run preview"
     import { defineConfig } from '@playwright/test';
     
     export default defineConfig({
       webServer: {
-        command: 'yarn preview',
+        command: 'npm run preview',
         url: 'http://localhost:3000/',
         timeout: 120 * 1000,
         reuseExistingServer: !process.env.CI,
@@ -247,7 +247,7 @@ Here is an example of the configuration and commands required when using Yarn:
     });
     ```
 
-1. Run `yarn build`, then run `yarn test:e2e` to run the Playwright tests.
+1. Run `npm run build`, then run `npm run test:e2e` to run the Playwright tests.
 
 More information about Playwright can be found in the links below:
 
