--- a/src/content/docs/en/guides/testing.mdx
+++ b/src/content/docs/en/guides/testing.mdx
@@ -226,7 +226,7 @@ Run your tests against your production code to more closely resemble your live, 
 
 You can also have Playwright start your server when you run your testing script by using the [`webServer`](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests) option in the Playwright configuration file.
 
-Here is an example of the configuration and commands required when using Yarn:
+Here is an example of the configuration and commands required when using npm:
 
 1. Add a test script to your `package.json` file in the project root, such as `"test:e2e": "playwright test"`.
 1. In `playwright.config.ts`, add the `webServer` object and update the command value to `npm run preview`.
