--- a/src/content/docs/en/guides/deploy/google-cloud.mdx
+++ b/src/content/docs/en/guides/deploy/google-cloud.mdx
@@ -38,7 +38,7 @@ Cloud Run is a serverless platform that allows you to run a container without ha
 
 #### Create Dockerfile & Build the Container
 
-Before you can deploy your Astro site to Cloud Run, you need to create a Dockerfile that will be used to build the container. You can find more [documentation on how to use Docker with Astro in our Docker Recipe](/en/recipes/docker/#creating-a-dockerfile).
+Before you can deploy your Astro site to Cloud Run, you need to create a Dockerfile that will be used to build the container. Find more information about [how to use Docker with Astro](/en/recipes/docker/#creating-a-dockerfile) in our recipe section.
 
 Once the Dockerfile is created, build it into an image and push it to Google Cloud. There are a few ways to accomplish this:
 
