--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -244,9 +244,9 @@ You can get the type of [`Astro.params`](/en/reference/api-reference/#astroparam
 
 ```astro title="src/pages/posts/[...slug].astro" {2,14-15}
 ---
-import { InferGetStaticParamsType, InferGetStaticPropsType } from 'astro';
+import { InferGetStaticParamsType, InferGetStaticPropsType, GetStaticPaths } from 'astro';
 
-export async function getStaticPaths() {
+export const getStaticPaths = (async () => {
   const posts = await getCollection('blog');
   return posts.map((post) => {
     return {
@@ -254,7 +254,7 @@ export async function getStaticPaths() {
       props: { draft: post.data.draft, title: post.data.title },
     };
   });
-}
+}) satisfies GetStaticPaths;
 
 type Params = InferGetStaticParamsType<typeof getStaticPaths>;
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
