make it clear that YOU'RE not changing the css

--- a/src/content/docs/en/guides/styling.mdx
+++ b/src/content/docs/en/guides/styling.mdx
@@ -25,15 +25,32 @@ Styling an Astro component is as easy as adding a `<style>` tag to your componen
 
 Astro `<style>` CSS rules are automatically **scoped by default**. Scoped styles are compiled behind-the-scenes to only apply to HTML written inside of that same component. The CSS that you write inside of an Astro component is automatically encapsulated inside of that component.
 
-```astro del={2,5} ins={3,6} ins=":where(.astro-HHNQFKH6)"
+This CSS:
+```astro title="index.astro"
 <style>
-  h1 { color: red; }
-  h1:where(.astro-HHNQFKH6) { color: red; }
+  h1 { 
+    color: red; 
+  }
 
-  .text { color: blue; }
-  .text:where(.astro-HHNQFKH6) { color: blue; }
+  .text { 
+    color: blue; 
+  }
 </style>
 ```
+
+Compiles to this:
+```astro
+<style>
+  h1:where(.astro-HHNQFKH6) {
+     color: red;
+  }
+
+  .text:where(.astro-HHNQFKH6) {
+    color: blue;
+  }
+</style>
+```
+
 
 Scoped styles don't leak and won't impact the rest of your site. In Astro, it is okay to use low-specificity selectors like `h1 {}` or `p {}` because they will be compiled with scopes in the final output.
 
