Fixed InferGetStaticPropsType example to use Props type

--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -261,7 +261,7 @@ type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const { slug } = Astro.params as Params;
 //               			 ^? { slug: string; }
-const { title } = Astro.props;
+const { title } = Astro.props as Props;
 //                			^? { draft: boolean; title: string; }
 ---
 ```
