ci: update error reference docs

--- a/src/content/docs/en/reference/errors/markdown-image-not-found.mdx
+++ b/src/content/docs/en/reference/errors/markdown-image-not-found.mdx
@@ -4,7 +4,7 @@
 # Instead, change this file: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 # Translators, please remove this note and the <DontEditWarning/> component.
 
-title: Missing alt property.
+title: Image not found.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
@@ -13,16 +13,14 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **ImageMissingAlt**: The alt property is required. (E03022)
+> Could not find requested image `IMAGE_PATH` at `FULL_IMAGE_PATH`. (E03029)
 
 ## What went wrong?
-The `alt` property allows you to provide descriptive alt text to users of screen readers and other assistive technologies. In order to ensure your images are accessible, the `Image` component requires that an `alt` be specified.
+Astro could not find an image you included in your Markdown content. Usually, this is simply caused by a typo in the path.
 
-If the image is merely decorative (i.e. doesn’t contribute to the understanding of the page), set `alt=""` so that screen readers know to ignore the image.
+Images in Markdown are relative to the current file. To refer to an image that is located in the same folder as the `.md` file, the path should start with `./`
 
 **See Also:**
 -  [Assets (Experimental)](/en/guides/assets/)
--  [Image component](/en/guides/assets/#image--astroassets)
--  [Image component#alt](/en/guides/assets/#alt-required)
 
 
