--- a/src/content/docs/en/reference/errors/expected-image-options.mdx
+++ b/src/content/docs/en/reference/errors/expected-image-options.mdx
@@ -4,7 +4,7 @@
 # Instead, change this file: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 # Translators, please remove this note and the <DontEditWarning/> component.
 
-title: Missing alt property.
+title: Expected image options.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
@@ -13,16 +13,21 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **ImageMissingAlt**: The alt property is required. (E03022)
+> **ExpectedImageOptions**: Expected getImage() parameter to be an object. Received `OPTIONS`. (E03028)
 
 ## What went wrong?
-The `alt` property allows you to provide descriptive alt text to users of screen readers and other assistive technologies. In order to ensure your images are accessible, the `Image` component requires that an `alt` be specified.
+`getImage()`'s first parameter should be an object with the different properties to apply to your image.
 
-If the image is merely decorative (i.e. doesn’t contribute to the understanding of the page), set `alt=""` so that screen readers know to ignore the image.
+```ts
+import { getImage } from "astro:assets";
+import myImage from "../assets/my_image.png";
+
+const optimizedImage = await getImage({src: myImage, width: 300, height: 300});
+```
+
+In most cases, this error happens because parameters were passed directly instead of inside an object.
 
 **See Also:**
 -  [Assets (Experimental)](/en/guides/assets/)
--  [Image component](/en/guides/assets/#image--astroassets)
--  [Image component#alt](/en/guides/assets/#alt-required)
 
 
