--- a/src/content/docs/en/reference/error-reference.mdx
+++ b/src/content/docs/en/reference/error-reference.mdx
@@ -47,6 +47,7 @@ The following reference is a complete list of the errors you may encounter while
 - [**ExpectedImage**](/en/reference/errors/expected-image/) (E03027)<br/>Expected src to be an image.
 - [**ExpectedImageOptions**](/en/reference/errors/expected-image-options/) (E03028)<br/>Expected image options.
 - [**MarkdownImageNotFound**](/en/reference/errors/markdown-image-not-found/) (E03029)<br/>Image not found.
+- [**ResponseSentError**](/en/reference/errors/response-sent-error/) (E03030)<br/>Unable to set response
 - [**UnknownViteError**](/en/reference/errors/unknown-vite-error/) (E04000)<br/>Unknown Vite Error.
 - [**FailedToLoadModuleSSR**](/en/reference/errors/failed-to-load-module-ssr/) (E04001)<br/>Could not import file.
 - [**InvalidGlob**](/en/reference/errors/invalid-glob/) (E04002)<br/>Invalid glob pattern.
