--- a/src/content/docs/ja/guides/imports.mdx
+++ b/src/content/docs/ja/guides/imports.mdx
@@ -223,7 +223,7 @@ Astroは、ブラウザの[`WebAssembly`](https://developer.mozilla.org/ja/docs/
 
 ## Nodeビルトイン
 
-Astroのユーザーには、可能な限りNode.jsのビルトイン（`fs`、`path`など）を避けるようをおすすめします。Astroは、アダプタを使用して複数のランタイムと互換性があります。これには、`fs`などのNodeビルトインモジュールをサポートしない[Deno](https://deno.land/)や[Cloudflare Worker](https://workers.cloudflare.com/)が含まれます。
+Astroのユーザーには、可能な限りNode.jsのビルトイン（`fs`、`path`など）を避けるようをおすすめします。Astroは、アダプタを使用して複数のランタイムと互換性があります。これには、`fs`などのNodeビルトインモジュールをサポートしない[Deno](https://deno.land/)や[Cloudflare Workers](https://workers.cloudflare.com/)が含まれます。
 
 私たちの目的は、一般的なNode.jsのビルトインに対するAstroの代替機能を提供することです。しかし、今のところそのような代替機能は存在しません。ですから、もし本当にこれらのビルトインモジュールを使う必要があるのなら、それを止めたいとは思いません。AstroはNode.jsのビルトインを、Nodeの新しいプレフィックスである`node:`を使ってサポートしています。たとえば、ファイルを読み込む場合、次のようにします。
 
