--- a/src/content/docs/de/guides/typescript.mdx
+++ b/src/content/docs/de/guides/typescript.mdx
@@ -245,9 +245,9 @@ Du kannst den Typ von [`Astro.params`](/de/reference/api-reference/#astroparams)
 
 ```astro title="src/pages/posts/[...slug].astro" {2,14-15}
 ---
-import { InferGetStaticParamsType, InferGetStaticPropsType } from 'astro';
+import { InferGetStaticParamsType, InferGetStaticPropsType, GetStaticPaths } from 'astro';
 
-export async function getStaticPaths() {
+export const getStaticPaths = (async () => {
   const posts = await getCollection('blog');
   return posts.map((post) => {
     return {
@@ -255,15 +255,15 @@ export async function getStaticPaths() {
       props: { draft: post.data.draft, title: post.data.title },
     };
   });
-}
+}) satisfies GetStaticPaths;
 
 type Params = InferGetStaticParamsType<typeof getStaticPaths>;
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
-const { slug } = Astro.params;
-//               ^? { slug: string; }
+const { slug } = Astro.params as Params;
+//               			 ^? { slug: string; }
 const { title } = Astro.props;
-//                ^? { draft: boolean; title: string; }
+//                			^? { draft: boolean; title: string; }
 ---
 ```
 
