--- a/src/content/docs/es/guides/integrations-guide/react.mdx
+++ b/src/content/docs/es/guides/integrations-guide/react.mdx
@@ -36,7 +36,7 @@ yarn astro add react
 pnpm astro add react
 ```
 
-Si tienes algún problema, [no dudes en informarnoslo en GitHub](https://github.com/withastro/astro/issues) y prueba los pasos de instalación manual a continuación.
+Si tienes algún problema, [no dudes en informárnoslo en GitHub](https://github.com/withastro/astro/issues) y prueba los pasos de instalación manual a continuación.
 
 ### Install dependencies manually
 
