--- a/src/content/docs/es/guides/cms/tina-cms.mdx
+++ b/src/content/docs/es/guides/cms/tina-cms.mdx
@@ -35,7 +35,7 @@ Para empezar, necesitarás un proyecto Astro existente.
     </PackageManagerTabs>
 
     - Cuando se te pregunte ingresar un Cloud ID, presione <kbd>Enter</kbd> para omitir. Generará uno más tarde si desea usar Tina Cloud.
-    - Cuando se te pregunte "¿Que framework estás usando ?", escoge **Otro**.
+    - Cuando se te pregunte "¿Qué framework estás usando?", escoge **Otro**.
     - Cuando se te pregunte donde se almacenan los archivos del directorio public, presione <kbd>Enter</kbd>.
 
     Depués de haber terminado lo anterior, deberías tener una carpeta `.tina` en la raíz de tu proyecto y una carpeta `admin` en tu directorio public. También creará un archivo Markdown en `content/posts/hello-world.md`.
