--- a/src/content/docs/es/guides/cms/contentful.mdx
+++ b/src/content/docs/es/guides/cms/contentful.mdx
@@ -208,9 +208,9 @@ En la sección **Content**  de tu espacion de Contentful, crea una nueva entrada
 - **Fecha:** `2022-10-05`
 - **Content:** `¡Este es mi primer publicación blog!`
 
-Presiona **Publish** para guardar la entrada. Acabas de crear tu primer publicación de post.
+Presiona **Publish** para guardar la entrada. Acabas de crear tu primer post.
 
-¡Siéntete libre de agregar tantos posts de blog como quieras, luego cambia a tu editor de código favorito para comenzar a hackear con Astro!
+¡Siéntete libre de agregar tantos posts como quieras, luego cambia a tu editor de código favorito para comenzar a hackear con Astro!
 
 ### Mostrando una lista de publicaciones de blog
 
@@ -255,9 +255,9 @@ const entries = await contentfulClient.getEntries<BlogPost>({
 ---
 ```
 
-Esta llamada de búsqueda devolverá una arreglo de tus publicaciones de blog en `entries.items`. Puedes usar `map()` para crear una nueva matriz (`posts`) que formatee tus datos devueltos.
+Esta llamada de búsqueda devolverá una arreglo de tus publicaciones en `entries.items`. Puedes usar `map()` para crear una nueva matriz (`posts`) que formatee tus datos devueltos.
 
-El ejemplo de abajo devuelve las propiedades `items.fields` de nuestro modelo de contenido para crear una vista previa de la publicación de blog, y al mismo tiempo, reformatea la fecha a un formato más legible.
+El ejemplo de abajo devuelve las propiedades `items.fields` de nuestro modelo de contenido para crear una vista previa de la publicación del blog, y al mismo tiempo, reformatea la fecha a un formato más legible.
 
 ```astro title="src/pages/index.astro" ins={9-17}
 ---
@@ -280,7 +280,7 @@ const posts = entries.items.map((item) => {
 ---
 ```
 
-Finalmente, puedes usar `posts` en tu plantilla para mostrar una vista previa de cada publicación de blog.
+Finalmente, puedes usar `posts` en tu plantilla para mostrar una vista previa de cada publicación.
 
 ```astro astro title="src/pages/index.astro" ins={19-37}
 ---
@@ -324,12 +324,12 @@ const posts = entries.items.map((item) => {
 
 ### Generando publicaciones de blog individuales
 
-Usa el mismo método para obtener tus datos de Contentful que arriba, pero esta vez, en una página que creará una ruta de página única para cada publicación de blog.
+Usa el mismo método para obtener tus datos de Contentful que arriba, pero esta vez, en una página que creará una ruta de página única para cada entrada del blog.
 
 
 #### Generación de sitios estáticos
 
-Si estás usand el modo estático predeterminado de Astro, usarás [rutas dinámicas](/es/core-concepts/routing/#rutas-dinámicas) y la función `getStaticPaths()`. Esta función se llamará en tiempo de compilación para generar la lista de rutas que se convierten en páginas.
+Si estás usando el modo estático predeterminado de Astro, usarás [rutas dinámicas](/es/core-concepts/routing/#rutas-dinámicas) y la función `getStaticPaths()`. Esta función se llamará en tiempo de compilación para generar la lista de rutas que se convierten en páginas.
 
 Crea un archivo nuevo llamado `[slug].astro` en `src/pages/posts/`.
 
@@ -384,7 +384,7 @@ En nuestro ejemplo, el objeto `props` pasa tres propiedades a la página:
 - contenido (un documento de texto enriquecido convertido a HTML usando `documentToHtmlString`)
 - fecha (formateada usando el constructor `Date`)
 
-Finalmente, puedes usar las propiedades de la página para mostrar tu publicación de blog.
+Finalmente, puedes usar las propiedades de la página para mostrar tu publicación.
 
 ```astro title="src/pages/posts/[slug].astro" ins={21,23-32}
 ---
@@ -492,7 +492,7 @@ try {
 ---
 ```
   
-Finalmente, puedes usar `post` para mostrar tu publicación de blog en la sección de plantilla.
+Finalmente, puedes usar `post` para mostrar tu publicación en la sección de plantilla.
 
 ```astro title="src/pages/posts/[slug].astro" ins={24-33}
 ---
