--- a/src/content/docs/zh-cn/guides/styling.mdx
+++ b/src/content/docs/zh-cn/guides/styling.mdx
@@ -20,13 +20,29 @@ Astro 的设计为了使设计和编写 CSS 变得轻而易举。直接在 Astro
 
 Astro `<style>` 标签内的 CSS 规则**默认自动限定范围**。作用域样式在幕后编译，只适用于写在同一组件内的 HTML。你在 Astro 组件中编写的 CSS 会自动封装在该组件中。
 
-```astro del={2,5} ins={3,6} ins=":where(.astro-HHNQFKH6)"
+现有 CSS：
+```astro title="index.astro"
 <style>
-  h1 { color: red; }
-  h1:where(.astro-HHNQFKH6) { color: red; }
+  h1 { 
+    color: red; 
+  }
 
-  .text { color: blue; }
-  .text:where(.astro-HHNQFKH6) { color: blue; }
+  .text { 
+    color: blue; 
+  }
+</style>
+```
+
+编译为：
+```astro
+<style>
+  h1:where(.astro-HHNQFKH6) {
+     color: red;
+  }
+
+  .text:where(.astro-HHNQFKH6) {
+    color: blue;
+  }
 </style>
 ```
 
