--- a/src/content/docs/zh-cn/guides/styling.mdx
+++ b/src/content/docs/zh-cn/guides/styling.mdx
@@ -430,10 +430,10 @@ Astro 支持在项目中添加流行的 CSS 库、工具和框架，如 [Tailwin
 
 Astro 支持通过 [Vite][vite-preprocessors] 使用 CSS 预处理器，如 [Sass][sass]、[Stylus][stylus] 和 [Less][less]。
 
-### Sass
+### Sass 和 SCSS
 
  ```
- npm install -D sass
+ npm install sass
  ```
 
 在 `.astro` 文件中使用 `<style lang="scss">` 或 `<style lang="sass">`。
@@ -441,7 +441,7 @@ Astro 支持通过 [Vite][vite-preprocessors] 使用 CSS 预处理器，如 [Sas
 ### Stylus
 
 ```
-npm install -D stylus
+npm install stylus
 ```
 
 在 `.astro` 文件中使用 `<style lang="styl">` 或 `<style lang="stylus">`。
@@ -449,7 +449,7 @@ npm install -D stylus
 ### Less
 
 ```
-npm install -D less
+npm install less
 ```
 
 在`.astro` 文件中使用 `<style lang="less">`。
