--- a/src/content/docs/zh-cn/guides/troubleshooting.mdx
+++ b/src/content/docs/zh-cn/guides/troubleshooting.mdx
@@ -33,7 +33,7 @@ Astro 组件是在服务器上运行的，因此你不能在 frontmatter (代码
 
 - 如果该代码位于 Astro 组件中，将其移动到 frontmatter (代码栅栏)之外的 `<script>` 标签中。这会告诉 Astro 在客户端运行该代码，`document` 和 `window` 在客户端是可用的。
 
-- 如果该代码位于框架组件中，尝试使用生命周期方法（例如 React 中的 [`useEffect()`](https://zh-hans.reactjs.org/docs/hooks-reference.html#useeffect)、Vue 中的 [`onMounted()`](https://cn.vuejs.org/api/composition-api-lifecycle.html#onmounted) 和 Svelte 中的 [`onMount()`](https://svelte.dev/docs#run-time-svelte-onmount) ），在渲染后访问这些对象。你也可以通过添加 [`client:only`](/zh-cn/reference/directives-reference/#clientonly) 指令来阻止组件在服务器上渲染。
+- 如果代码位于框架组件中，请尝试使用生命周期方法（例如 React 中的 [`useEffect()`](https://react.dev/reference/react/useEffect)、Vue 中的 [`onMounted()`](https://vuejs.org/api/composition-api-lifecycle.html#onmounted) 和 Svelte 中的 [`onMount()`](https://svelte.dev/docs#run-time-svelte-onmount)）在渲染后访问这些对象。通过使用 [client:](/zh-cn/reference/directives-reference/#客户端指令) 指令（例如 `client:load`）来告诉框架组件在客户端进行水合，从而运行这些生命周期方法。你还可以通过添加 [`client:only`](/zh-cn/reference/directives-reference/#clientonly) 指令来防止组件在服务器上进行渲染。
 
 **状态**：预期 Astro 行为。
 
