--- a/src/content/docs/zh-cn/reference/integrations-reference.mdx
+++ b/src/content/docs/zh-cn/reference/integrations-reference.mdx
@@ -180,7 +180,7 @@ injectRoute({
 
 **上一个钩子**：[`astro:config:setup`](#astroconfigsetup)
 
-**下一个钩子**：当在开发或预览模式下运行时为 [`astro:server:setup`](#astroserversetup)，在生产构建时为 [astro:build:start](#astrobuildstart)
+**下一个钩子**：当在开发模式下运行时为 [`astro:server:setup`](#astroserversetup)，在生产构建时为 [astro:build:start](#astrobuildstart)
 
 **时机**：在 Astro 配置解析后，其他集成已经运行 `astro:config:setup` 钩子后。
 
@@ -202,7 +202,7 @@ injectRoute({
 
 **下一个钩子**：[`astro:server:start`](#astroserverstart)
 
-**时机**：在开发或预览模式下创建 Vite 服务器后，但在 `listen()` 事件触发前。详见[Vite 的 createServer API](https://vitejs.dev/guide/api-javascript.html#createserver)。
+**时机**：在开发模式下创建 Vite 服务器后，但在 `listen()` 事件触发前。详见[Vite 的 createServer API](https://vitejs.dev/guide/api-javascript.html#createserver)。
 
 **用途**：更新 Vite 服务端选项和中间件。
 
@@ -214,7 +214,7 @@ injectRoute({
 
 **类型**：[`ViteDevServer`](https://vitejs.dev/guide/api-javascript.html#vitedevserver)
 
-在开发和预览模式下使用的 Vite 服务器的可变实例。例如，[在 Partytown 集成中使用](/zh-cn/guides/integrations-guide/partytown/)，以注入 Partytown 服务器作为中间件。
+在开发模式下使用的 Vite 服务器的可变实例。例如，[在 Partytown 集成中使用](/zh-cn/guides/integrations-guide/partytown/)，以注入 Partytown 服务器作为中间件。
 
 ```js
 export default {
