--- a/src/content/docs/en/guides/troubleshooting.mdx
+++ b/src/content/docs/en/guides/troubleshooting.mdx
@@ -205,23 +205,22 @@ When you encounter a bug in Astro, it's most helpful to create a minimal reprodu
 
 A minimal reproduction should be a simplified version of the code that reliably demonstrates the issue.
 
-### Create a Stackblitz via [astro.new](https://astro.new).
+### Create a StackBlitz via [astro.new](https://astro.new)
 
 You can use [astro.new](https://astro.new) to create a new Astro project with a single click. There you can choose a couple of options to setup a new project, for minimal reproductions, we recommend the minimal (empty) example, so you can isolate the occuring issue.
 
-We ask you to use [Stackblitz](https://stackblitz.com), because it allows maintainers and people willing to help to quickly reproduce your issue without having to set up a local environment. Whereas with a complete project or repo, we would have to clone it, install dependencies, and run it locally, which can introduce more issues.
+We ask you to use [StackBlitz](https://stackblitz.com) because it allows maintainers and people willing to help quickly reproduce your issue without setting up a local environment. Whereas with a complete project or repo, we would have to clone it, install dependencies, and run it locally, which can introduce more issues.
 
 ### Minimal code
 
-When your repo is setup in Stackblitz, go through all steps to reproduce your issue. This can include adding packages, changing configuration, etc.
-
+When your repo is set up in StackBlitz, go through all steps to reproduce your issue. This can include adding packages, changing configuration, etc.
 You should only add the minimum amount of code necessary to reproduce the issue. This means that you should remove all code that is not directly related to the issue.
 
 ### Create your issue
 
 In most of Astro's repositories you'll find issue templates that will guide you on how to write good and understandable issues. It's important that you follow these templates as much as possible, so we don't have to go back and forth with you to get the information we need to solve the issue.
 
-Share the link to your Stackblitz with us in your opened issue, Additionally, it should include clear instructions on how to replicate the issue and a description of the expected and actual behavior.
+Share the link to your StackBlitz with us in your opened issue, Additionally, it should include clear instructions on how to replicate the issue and a description of the expected and actual behavior.
 
 ## Need more?
 
