--- a/src/content/docs/de/reference/api-reference.mdx
+++ b/src/content/docs/de/reference/api-reference.mdx
@@ -130,15 +130,15 @@ import Heading from '../components/Heading.astro';
 <Heading title="Mein erster Beitrag" date="09 Aug 2022" />
 ```
 
-📚 Erfahre mehr darüber, wie [Markdown und MDX Layouts](/de/guides/markdown-content/#frontmatter-layout) mit Eigenschaften umgehen.
+📚 Erfahre mehr darüber, wie [Markdown und MDX Layouts](/de/guides/markdown-content/#frontmatter) mit Eigenschaften umgehen.
 
-📚 Lerne, wie du [TypeScript-Typdefinitionen für deine Eigenschaften](/de/guides/typescript/#component-props) hinzufügst.
+📚 Lerne, wie du [TypeScript-Typdefinitionen für deine Eigenschaften](/de/guides/typescript/#komponenten-eigenschaften) hinzufügst.
 
 ### `Astro.params`
 
 `Astro.params` ist ein Objekt, das die Werte der dynamischen Routensegmente enthält, die für diese Anfrage angepasst wurden.
 
-Bei statischen Builds sind dies die `Parameter`, die von `getStaticPaths()` zurückgegeben und für das Prerendering von [dynamischen Routen](/de/core-concepts/routing/#dynamic-routes) verwendet werden.
+Bei statischen Builds sind dies die `Parameter`, die von `getStaticPaths()` zurückgegeben und für das Prerendering von [dynamischen Routen](/de/core-concepts/routing/#dynamische-routen) verwendet werden.
 
 Bei SSR-Builds kann dies ein beliebiger Wert sein, der den Pfadsegmenten im dynamischen Routenmuster entspricht.
 
@@ -442,7 +442,7 @@ export function get(context: APIContext) {
 
 `context.params` ist ein Objekt, das die Werte der dynamischen Routensegmente enthält, die für diese Anfrage angepasst wurden.
 
-Bei statischen Builds sind dies die `Parameter`, die von `getStaticPaths()` zurückgegeben und für das Prerendering von [dynamischen Routen](/de/core-concepts/routing/#dynamic-routes) verwendet werden.
+Bei statischen Builds sind dies die `Parameter`, die von `getStaticPaths()` zurückgegeben und für das Prerendering von [dynamischen Routen](/de/core-concepts/routing/#dynamische-routen) verwendet werden.
 
 Bei SSR-Builds kann dies ein beliebiger Wert sein, der den Pfadsegmenten im dynamischen Route-Pattern entspricht.
 
@@ -488,7 +488,7 @@ export function get({ props }: APIContext) {
 }
 ```
 
-Siehe auch: [Datenübergabe mit `props`](#data-passing-with-props)
+Siehe auch: [Datenübergabe mit `props`](#datenübergabe-mit-props)
 
 ### `context.request`
 
@@ -836,8 +836,8 @@ Ein String, der den einfachen, nicht kompilierten Textkörper des Markdown- oder
 Eine Funktion, die ein gegebenes Markdown- oder MDX-Dokument für die Darstellung kompiliert. Sie gibt die folgenden Eigenschaften zurück:
 
 - `<Content />` - Eine Komponente, die verwendet wird, um den Inhalt des Dokuments in einer Astro-Datei darzustellen.
-- `headings` - Eine generierte Liste von Überschriften, die das [Astro-Werkzeug `getHeadings()`](/de/guides/markdown-content/#exported-properties) bei Markdown- und MDX-Importen widerspiegelt.
-- `remarkPluginFrontmatter` - Das geänderte Frontmatter-Objekt, nachdem ein [remark- oder rehype-Plugin angewendet wurde](/de/guides/markdown-content/#modifying-frontmatter-programmatically). Wird auf den Typ `any` gesetzt.
+- `headings` - Eine generierte Liste von Überschriften, die das [Astro-Werkzeug `getHeadings()`](/de/guides/markdown-content/#exportierte-eigenschaften) bei Markdown- und MDX-Importen widerspiegelt.
+- `remarkPluginFrontmatter` - Das geänderte Frontmatter-Objekt, nachdem ein [remark- oder rehype-Plugin angewendet wurde](/de/guides/markdown-content/#frontmatter). Wird auf den Typ `any` gesetzt.
 
 ```astro
 ---
@@ -925,7 +925,7 @@ import { Prism } from '@astrojs/prism';
 <Prism lang="js" code={`const foo = 'bar';`} />
 ```
 
-Diese Komponente bietet sprachspezifische Syntaxhervorhebung für Codeblöcke durch Anwendung der CSS-Klassen von Prism. Beachte, dass **du ein Prism-CSS-Stylesheet** bereitstellen (oder dein eigenes mitbringen) musst, damit die Syntaxhervorhebung angezeigt wird! Weitere Informationen findest du im Abschnitt [Prism-Konfiguration](/de/guides/markdown-content/#prism-configuration).
+Diese Komponente bietet sprachspezifische Syntaxhervorhebung für Codeblöcke durch Anwendung der CSS-Klassen von Prism. Beachte, dass **du ein Prism-CSS-Stylesheet** bereitstellen (oder dein eigenes mitbringen) musst, damit die Syntaxhervorhebung angezeigt wird! Weitere Informationen findest du im Abschnitt [Prism-Konfiguration](/de/guides/markdown-content/#prism-konfiguration).
 
 In der [Liste der von Prism unterstützten Sprachen](https://prismjs.com/#supported-languages) findest du den entsprechenden Alias für eine Sprache. Und du kannst deine Astro-Codeblöcke auch mit `lang="astro"` anzeigen!
 
