updated the react docs url to the new one

--- a/src/content/docs/es/guides/integrations-guide/react.mdx
+++ b/src/content/docs/es/guides/integrations-guide/react.mdx
@@ -12,7 +12,7 @@ import Video from '~/components/Video.astro';
 import DontEditWarning from '~/components/DontEditWarning.astro';
 
 
-Esta **[integración de Astro][astro-integration]** habilita el renderizado del lado del servidor y la hidratación del lado del cliente para tus componentes [React](https://reactjs.org/).
+Esta **[integración de Astro][astro-integration]** habilita el renderizado del lado del servidor y la hidratación del lado del cliente para tus componentes [React](https://react.dev/).
 
 ## Instalación
 
