--- a/src/content/docs/es/contribute.mdx
+++ b/src/content/docs/es/contribute.mdx
@@ -8,7 +8,7 @@ import ContributorList from '~/components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-Aceptamos contribuciones de cualquier tamaño y contribuyentes de cualquier nivel de habilidad. Como un proyecto de código abierto, creemos en devolver a nuestros contribuyentes. Estamos encantados de ayudar con orientación sobre PR, escritura técnica y convertir cualquier idea de función en realidad.
+Aceptamos contribuciones de cualquier tamaño y contribuyentes de todos los niveles de habilidad. Como un proyecto de código abierto, creemos en devolver a nuestros contribuyentes. Estamos encantados de ayudar con orientación sobre PRs, escritura técnica y convertir cualquier idea de función en realidad.
 
 ## Maneras de contribuir
 
@@ -18,7 +18,7 @@ El sitio web de la documentación de Astro es ... ¡un sitio web de Astro! Mante
 
 ¡También puedes hacer una contribución enorme al involucrarte dejando comentarios de revisión en PR, agregando ideas en problemas y discusiones existentes de GitHub y participando en nuestras tareas de mantenimiento de problemas "Fijados"!
 
-Cada PR, especialmente los PR de traducción, ¡necesita evaluadores! Revisar PR y dejar comentarios, sugerencias o un aprobador "LGTM!" ("¡Me parece bien!") Es una gran manera de comenzar en Team Docs y aprender más sobre Astro.
+Cada PR, especialmente las PR de traducción, ¡necesita evaluadores! Revisar la PR y dejar comentarios, sugerencias o un aprobador "LGTM!" ("¡Me parece bien!") Es una gran manera de comenzar en Team Docs y aprender más sobre Astro.
 
 ## Guías de contribuyentes
 
@@ -33,7 +33,7 @@ Cada PR, especialmente los PR de traducción, ¡necesita evaluadores! Revisar PR
 
 Estas son las guías para los roles dentro de la comunidad de Astro.
 - [Guía del Mantenedor](https://github.com/withastro/docs/blob/main/MAINTAINERS.md) - Como mantener este repositorio como un mantenedor de Astro.
-- [Guía de Escuadrón de Apoyo](https://github.com/withastro/docs/blob/main/SUPPORTSQUAD.md) - Como ayudar a Team Docs como parte de su rol de soporte.
+- [Guía de Escuadrón de Apoyo](https://github.com/withastro/docs/blob/main/SUPPORTSQUAD.md) - Como ayudar a Team Docs como parte de soporte técnico.
 
 ## Nuestros contribuyentes
 
