--- a/src/content/docs/zh-cn/core-concepts/astro-pages.mdx
+++ b/src/content/docs/zh-cn/core-concepts/astro-pages.mdx
@@ -32,7 +32,7 @@ Astro 页面使用 `.astro` 文件扩展名，并支持与 [Astro 组件](/zh-cn
 
 ```astro
 ---
-// 例子: src/pages/index.astro
+// 示例: src/pages/index.astro
 ---
 <html lang="en">
   <head>
@@ -48,7 +48,7 @@ Astro 页面使用 `.astro` 文件扩展名，并支持与 [Astro 组件](/zh-cn
 
 ```astro {3} /</?MySiteLayout>/
 ---
-// 例子: src/pages/index.astro
+// 示例: src/pages/index.astro
 import MySiteLayout from '../layouts/MySiteLayout.astro';
 ---
 <MySiteLayout>
