--- a/src/content/docs/zh-cn/reference/errors/get-static-paths-removed-rsshelper.mdx
+++ b/src/content/docs/zh-cn/reference/errors/get-static-paths-removed-rsshelper.mdx
@@ -11,7 +11,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 > **GetStaticPathsRemovedRSSHelper**: RSS助手已从 `getStaticPaths` 中删除。请改用新的 @astrojs/rss 包。 (E03012)
 
 ## 哪里出了问题？
-`getStaticPaths` 不再提供生成 RSS 摘要的助手函数。 我们建议迁移到 [@astrojs/rss](/zh-cn/guides/rss/#setting-up-astrojsrss) 集成。
+`getStaticPaths` 不再提供生成 RSS 摘要的助手函数。 我们建议迁移到 [@astrojs/rss](/zh-cn/guides/rss/#设置-astrojsrss) 集成。
 
 **请参阅：**
 -  [RSS Guide](/zh-cn/guides/rss/)
