--- a/src/content/docs/es/guides/cms/wordpress.mdx
+++ b/src/content/docs/es/guides/cms/wordpress.mdx
@@ -8,7 +8,7 @@ i18nReady: true
 ---
 import FileTree from '~/components/FileTree.astro'
 
-[wordpress](https://wordpress.org/) es una plataforma de gestión de contenidos que incluye su propio frontend, pero también puede ser usada como un CMS headless para proveer contenido a tu proyecto Astro.
+[Wordpress](https://wordpress.org/) es una plataforma de gestión de contenidos que incluye su propio frontend, pero también puede ser usada como un CMS headless para proveer contenido a tu proyecto Astro.
 
 ## Integración con Astro
 
