fix: fixed typos

--- a/src/content/docs/es/guides/cms/wordpress.mdx
+++ b/src/content/docs/es/guides/cms/wordpress.mdx
@@ -8,11 +8,11 @@ i18nReady: true
 ---
 import FileTree from '~/components/FileTree.astro'
 
-[Wordpress](https://wordpress.org/) es una plataforma de gestión de contenidos que incluye su propio frontend, pero también puede ser usada como un CMS headless para proveer contenido a tu proyecto Astro.
+[WordPress](https://wordpress.org/) es una plataforma de gestión de contenidos que incluye su propio frontend, pero también puede ser usada como un CMS headless para proveer contenido a tu proyecto Astro.
 
 ## Integración con Astro
 
-Wordpress viene con una [API REST de WordPress](https://developer.wordpress.org/rest-api/) integrada para conectar tus datos de WordPress a Astro. Opcionalmente puedes instalar [WPGraphQL](https://wordpress.org/plugins/wp-graphql/) en tu sitio para usar GraphQL.
+WordPress viene con una [API REST de WordPress](https://developer.wordpress.org/rest-api/) integrada para conectar tus datos de WordPress a Astro. Opcionalmente puedes instalar [WPGraphQL](https://wordpress.org/plugins/wp-graphql/) en tu sitio para usar GraphQL.
 
 ### Prerrequisitos
 
@@ -177,9 +177,9 @@ Para desplegar tu sitio visita nuestra [guía de despliegue](/es/guides/deploy/)
 
 ## Recursos de la Comunidad
 
-- [Construyendo un sitio web Astro con Wordpress como CMS Headless](https://blog.openreplay.com/building-an-astro-website-with-wordpress-as-a-headless-cms/) por Chris Bongers.
+- [Construyendo un sitio web Astro con WordPress como CMS Headless](https://blog.openreplay.com/building-an-astro-website-with-wordpress-as-a-headless-cms/) por Chris Bongers.
 - [Construyendo con Astro x WordPress](https://www.youtube.com/watch?v=Jstqgklvfnc) en la transmisión de Ben Holmes.
-- [Construyendo un sitio Wordpress Headless con Astro](https://developers.wpengine.com/blog/building-a-headless-wordpress-site-with-astro) por Jeff Everhart
+- [Construyendo un sitio WordPress Headless con Astro](https://developers.wpengine.com/blog/building-a-headless-wordpress-site-with-astro) por Jeff Everhart
 - [Astro y WordPress como API](https://darko.io/posts/astrojs-y-wordpress-como-api/)
 
 ## Sitios en Producción
