fix: fixed broken link

--- a/src/content/docs/es/guides/cms/wordpress.mdx
+++ b/src/content/docs/es/guides/cms/wordpress.mdx
@@ -115,7 +115,7 @@ let posts = await res.json();
 
 ### Usando la API de WordPress para generar páginas
 
-La página `src/pages/dinos/[slug].astro` [genera dinámicamente una página](/en/core-concepts/routing/#dynamic-routes) para cada dinosaurio.
+La página `src/pages/dinos/[slug].astro` [genera dinámicamente una página](/es/core-concepts/routing/#rutas-dinámicas) para cada dinosaurio.
 
 ```astro title="/src/pages/dinos/[slug].astro"
 ---
