--- a/src/content/docs/es/tutorial/2-pages/5.mdx
+++ b/src/content/docs/es/tutorial/2-pages/5.mdx
@@ -145,11 +145,11 @@ Tu página Acerca de ahora tiene estilo usando *ambos* el archivo importado `glo
 </Box>
 
 ### Recursos
-- [Comparación entre la sintaxis Astro y JSX](/en/core-concepts/astro-syntax/#differences-between-astro-and-jsx)
+- [Comparación entre la sintaxis Astro y JSX](/es/core-concepts/astro-syntax/#differences-between-astro-and-jsx)
 
-- [Etiqueta Astro `<style>`.](/en/guides/styling/#styling-in-astro)
+- [Etiqueta Astro `<style>`.](/es/guides/styling/#styling-in-astro)
 
-- [Variables CSS en Astro](/en/guides/styling/#css-variables)
+- [Variables CSS en Astro](/es/guides/styling/#css-variables)
 
 
 
