change link title to match updated content

--- a/src/content/docs/zh-cn/reference/errors/get-static-paths-removed-rsshelper.mdx
+++ b/src/content/docs/zh-cn/reference/errors/get-static-paths-removed-rsshelper.mdx
@@ -14,6 +14,6 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 `getStaticPaths` 不再提供生成 RSS 摘要的助手函数。 我们建议迁移到 [@astrojs/rss](/zh-cn/guides/rss/#设置-astrojsrss) 集成。
 
 **请参阅：**
--  [RSS Guide](/zh-cn/guides/rss/)
+-  [添加 RSS 摘要](/zh-cn/guides/rss/)
 
 
