i18n(zh-cn): add build.assetsPrefix in config-reference

--- a/src/content/docs/zh-cn/reference/configuration-reference.mdx
+++ b/src/content/docs/zh-cn/reference/configuration-reference.mdx
@@ -315,6 +315,28 @@ export default defineConfig({
 **另见**：
 - outDir
 
+### build.assetsPrefix
+
+<p>
+
+**类型：** `string`<br />
+**默认值：** `undefined`<br />
+<Since v="2.2.0" />
+</p>
+
+指定 Astro 生成的资源链接的前缀。如果资源与当前站点来自不同的域，则可以使用此选项。
+
+例如，如果设置为 `https://cdn.example.com`，则资源将从 `https://cdn.example.com/_astro/...` 获取（而不管 `base` 选项如何设置）。
+
+您需要将 `./dist/_astro/` 中的文件上传到 `https://cdn.example.com/_astro/` 以提供资源。该过程取决于第三方域是如何托管的。要重命名 `_astro` 路径，请在 `build.assets` 中指定一个新目录。
+
+```js
+{
+  build: {
+    assetsPrefix: 'https://cdn.example.com'
+  }
+}
+```
 
 ### build.serverEntry
 
