Apply suggestions from code review
Co-authored-by: Dan Jutan <danjutan@gmail.com>

--- a/src/content/docs/en/recipes/external-links.mdx
+++ b/src/content/docs/en/recipes/external-links.mdx
@@ -1,11 +1,11 @@
 ---
 title: Add icons to external links
-description: Learn how to add icons to external links in your Markdown files
+description: Learn how to install a rehype plugin to add icons to external links in your Markdown files
 i18nReady: false
 type: recipe
 ---
 
-Using a Rehype plugin, you can add icons to external links in your Markdown files, as well as open those links in a new tab.
+Using a rehype plugin, you can identify links in your markdown files that point to external sites and modify them. This includes adding icons to the end of each link.
 
 ## Prerequisites
 - A project using Markdown for content pages.
@@ -18,7 +18,7 @@ Using a Rehype plugin, you can add icons to external links in your Markdown file
     npm install rehype-external-links
     ```
 
-2. Add the plugin to your `astro.config.mjs` file. Pass the plugin options by passing an array with the plugin as the first item and the options as the second item. Set the content type to `text`, or `raw` to use HTML as the content.
+2. Import the plugin into your `astro.config.mjs` file. Pass it to the `rehypePlugins` array, along with an options object. Add a content property and set its `type` to `text` if you want to add plain text to the end of the link, or `raw` to add HTML to the end of the link.
 
     ```ts
     // ...
@@ -31,8 +31,6 @@ Using a Rehype plugin, you can add icons to external links in your Markdown file
           [
             rehypeExternalLinks,
             {
-              target: '_blank',
-              rel: ['noopener', 'noreferrer'],
               content: { type: 'text', value: ' 🔗' }
             }
           ],
